objects/Product_Revenue_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <formula>Monthly_Revenue_Schedule__r.Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Monthly_Revenue_Schedule__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC__c</fullName>
        <label>POC</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Revenue Schedules</relationshipLabel>
        <relationshipName>Product_Revenue_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <formula>TEXT(Product__r.Offering__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Category__c</fullName>
        <label>Revenue Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <formula>IF( 
OR( 
Product__r.Name = 'Services', 
Product__r.Name = 'DOC Data Configuration', 
Product__r.Name = 'DOC Library Configuration' 
), 'Services Revenue', 
IF( 
OR( 
Product__r.Name = 'Subscription', 
Product__r.Name = 'DOC Label', 
Product__r.Name = 'DOC Nhanes', 
Product__r.Name = 'IMHE', 
Product__r.Name = 'DOC Library Licensing', 
Product__r.Name = 'DOC Data Licensing' 
), 'Subscription Revenue', 
IF( 
Monthly_Revenue_Schedule__r.Opportunity__r.Use_New_Forecasting_Algorithm__c, TEXT(Revenue_Category__c),'No Type')))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue_Schedule__c</fullName>
        <label>Monthly Revenue Schedule</label>
        <referenceTo>Monthly_Revenue_Schedule__c</referenceTo>
        <relationshipLabel>Product Revenue Schedules</relationshipLabel>
        <relationshipName>Product_Revenue_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Revenue Schedule</label>
    <nameField>
        <displayFormat>PRS-{0}</displayFormat>
        <label>Product Revenue Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Revenue Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>